2008-02-21  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstqueue.c:
	  Ensure that buffer metadata is writeable, before modifying. Spotted by
	  Mike.

2008-02-20  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstqueue.c:
	* plugins/elements/gstqueue.h:
	  When dropping buffers in leaky modes, mark next buffers we sent as
	  DISCONT.

2008-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* plugins/elements/gstfilesrc.c: (gst_file_src_map_region):
	  Also, if mmap() fails that would be a READ error, not OPEN_READ.

2008-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* plugins/elements/Makefile.am:
	* plugins/elements/gstbufferstore.c:
	* plugins/elements/gstbufferstore.h:
	* plugins/elements/gsttypefindelement.h:
	  Remove GstBufferStore, no idea why we were still building it.
	  It's not used anywhere and superseded by GstAdapter.

	* plugins/elements/gstfilesrc.c: (gst_file_src_map_region),
	  (gst_file_src_create_mmap):
	* plugins/indexers/gstfileindex.c: (gst_file_index_add_association):
	  Printf format fixes for 64-bit integers.

2008-02-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Don't set GST_CACHE_DIR and allow to set it by a configure parameter.
	We're not in 0.8 times anymore.

2008-02-19  Jan Schmidt  <Jan.Schmidt@sun.com>

	* libs/gst/check/gstcheck.c: (gst_check_drop_buffers),
	(gst_check_element_push_buffer_list):
	* libs/gst/check/gstcheck.h:
	Make the declaration in the header for
	gst_check_element_push_buffer_list match the implementation.

	Fix up spelling, grammar and wording of the documentation in a few
	places, and add the Since keyword to new API functions.
	Use g_list_delete_link instead of g_list_remove in
	gst_check_drop_buffers, since it's immeasurably more efficient.

	* tests/check/elements/fakesrc.c: (GST_START_TEST):
	Use new gst_check_drop_buffers function where appropriate.

	* win32/common/libgstbase.def:
	* win32/common/libgstreamer.def: